--- a/siddhartha/bio/index.html
+++ b/siddhartha/bio/index.html
@@ -17,7 +17,7 @@
             <li class="list-item">Proteins, carbohydrates, lipids</li>
             <li class="list-item">Nucleic acids structure</li>
         </ul>
-        <button onclick="location.href='unit1.html'">Study Unit 1 ➜</button>
+        <button onclick="location.href='unit1/unit1.html'">Study Unit 1 ➜</button>
     </div>
 
     <div class="unit unit-2">
