--- a/siddhartha/bio/unit1/unit1.html
+++ b/siddhartha/bio/unit1/unit1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unit 1: Chemistry of Life ✿</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <div class="unit unit-1">
@@ -67,7 +67,7 @@
         </div>
 
         <div class="navigation">
-            <button onclick="location.href='index.html'">← Main Menu</button>
+            <button onclick="location.href='../index.html'">← Main Menu</button>
             <button onclick="location.href='unit2.html'">Unit 2 →</button>
         </div>
     </div>
