--- a/siddhartha/bio/unit1/unit1-quiz.html
+++ b/siddhartha/bio/unit1/unit1-quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unit 1 Quiz</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <style>
         .hidden {
             display: none;
