--- a/siddhartha/bio/index.html
+++ b/siddhartha/bio/index.html
@@ -28,7 +28,7 @@
             <li class="list-item">Organelle functions</li>
             <li class="list-item">Cell transport mechanisms</li>
         </ul>
-        <button onclick="location.href='unit2.html'">Study Unit 2 ➜</button>
+        <button onclick="location.href='unit2/unit2.html'">Study Unit 2 ➜</button>
     </div>
 
     <div class="unit unit-3">
@@ -39,7 +39,7 @@
             <li class="list-item">Cellular respiration</li>
             <li class="list-item">Photosynthesis</li>
         </ul>
-        <button onclick="location.href='unit3.html'">Study Unit 3 ➜</button>
+        <button onclick="location.href='unit3/unit3.html'">Study Unit 3 ➜</button>
     </div>
 
     <div class="unit unit-4">
@@ -50,7 +50,7 @@
             <li class="list-item">Response mechanisms</li>
             <li class="list-item">Cell-cell interactions</li>
         </ul>
-        <button onclick="location.href='unit4.html'">Study Unit 4 ➜</button>
+        <button onclick="location.href='unit4/unit4.html'">Study Unit 4 ➜</button>
     </div>
 
     <div class="unit unit-5">
@@ -61,7 +61,7 @@
             <li class="list-item">Mendelian genetics</li>
             <li class="list-item">Non-Mendelian inheritance</li>
         </ul>
-        <button onclick="location.href='unit5.html'">Study Unit 5 ➜</button>
+        <button onclick="location.href='unit5/unit5.html'">Study Unit 5 ➜</button>
     </div>
 
     <div class="note">
