--- a/siddhartha/bio/index.html
+++ b/siddhartha/bio/index.html
@@ -64,6 +64,20 @@
         <button onclick="location.href='unit5/unit5.html'">Study Unit 5 ➜</button>
     </div>
 
+    <div class="unit unit-4-honors">
+        <h2>Unit 4: Genetics and Cell Division ✿</h2>
+        <p>Understanding DNA inheritance, cell reproduction, and genetic principles:</p>
+        <ul>
+            <li class="list-item">DNA structure & chromosomes</li>
+            <li class="list-item">Sexual vs asexual reproduction</li>
+            <li class="list-item">Mitosis & cell division</li>
+            <li class="list-item">Cancer & tumor formation</li>
+            <li class="list-item">Sex determination & inheritance</li>
+            <li class="list-item">Mendelian genetics</li>
+        </ul>
+        <button onclick="location.href='unit4-honors/unit4.html'">Study Unit 4 ➜</button>
+    </div>
+
     <div class="note">
         <p>💕 Made with love by Hana for AP Bio success! 화이팅! ✨</p>
     </div>
