--- a/siddhartha/bio/index.html
+++ b/siddhartha/bio/index.html
@@ -65,7 +65,7 @@
     </div>
 
     <div class="unit unit-4-honors">
-        <h2>Unit 4: Genetics and Cell Division ✿</h2>
+        <h2>Unit 4: Genetics and Cell Division (Honors)</h2>
         <p>Understanding DNA inheritance, cell reproduction, and genetic principles:</p>
         <ul>
             <li class="list-item">DNA structure & chromosomes</li>
@@ -76,6 +76,20 @@
             <li class="list-item">Mendelian genetics</li>
         </ul>
         <button onclick="location.href='unit4-honors/unit4.html'">Study Unit 4 ➜</button>
+    </div>
+
+    <div class="unit unit-5-honors">
+        <h2>Unit 5: Molecular Genetics (Honors)</h2>
+        <p>Understanding the molecular basis of heredity and gene expression:</p>
+        <ul>
+            <li class="list-item">DNA structure & organization</li>
+            <li class="list-item">Gene transcription & RNA</li>
+            <li class="list-item">Protein synthesis & translation</li>
+            <li class="list-item">Mutations & genetic changes</li>
+            <li class="list-item">Gene regulation & expression</li>
+            <li class="list-item">Biotechnology applications</li>
+        </ul>
+        <button onclick="location.href='unit5-honors/unit5.html'">Study Unit 5 ➜</button>
     </div>
 
     <div class="note">
