unit 3 honors start

--- a/siddhartha/bio/index.html
+++ b/siddhartha/bio/index.html
@@ -42,6 +42,20 @@
         <button onclick="location.href='unit3/unit3.html'">Study Unit 3 ➜</button>
     </div>
 
+    <div class="unit unit-3-honors">
+        <h2>Unit 3: Cellular Energetics (Honors)</h2>
+        <p>Understanding how cells transform and use energy through key processes like cellular respiration and photosynthesis:</p>
+        <ul>
+            <li class="list-item">First and second laws of thermodynamics</li>
+            <li class="list-item">ATP cycle and energy transfers</li>
+            <li class="list-item">Cellular respiration stages</li>
+            <li class="list-item">Photosynthesis and carbon fixation</li>
+            <li class="list-item">Fermentation and anaerobic processes</li>
+            <li class="list-item">Carbon cycle and environmental impacts</li>
+        </ul>
+        <button onclick="location.href='unit3-honors/unit3.html'">Study Unit 3 ➜</button>
+    </div>
+
     <div class="unit unit-4">
         <h2>Unit 4: Cell Communication</h2>
         <p>Cell signaling processes:</p>
