--- a/siddhartha/bio/unit3-honors/unit3.html
+++ b/siddhartha/bio/unit3-honors/unit3.html
@@ -47,7 +47,7 @@
                 <li class="list-item"><a href="case-studies.html">Case Studies</a></li>
                 <li class="list-item"><a href="lab-concepts.html">Lab Activities</a></li>
                 <li class="list-item"><a href="unit-summary.html">Unit Summary</a></li>
-                <li class="list-item"><a href="quiz.html">Self Quiz</a></li>
+                <li class="list-item"><a href="quiz.html">파이팅! Unit Quiz</a></li>
             </ul>
         </div>
 
@@ -66,12 +66,13 @@
         </div>
 
         <div class="study-tips">
-            <h3>Tips from Hana~ ❤️</h3>
+            <h3>학습 팁 (Study Tips) 💕</h3>
             <ul>
                 <li>Draw out the complete pathways step by step!</li>
                 <li>Track ATP production through each stage</li>
                 <li>Make flashcards for key enzymes and molecules</li>
                 <li>Connect concepts to real environmental examples</li>
+                <li>Fighting! You can do it! 열심히 공부하세요~</li>
             </ul>
         </div>
 
