--- a/siddhartha/bio/unit1/unit1.html
+++ b/siddhartha/bio/unit1/unit1.html
@@ -51,6 +51,7 @@
                 <li class="list-item"><a href="unit1-lab-concepts.html">Lab Concepts</a></li>
                 <li class="list-item"><a href="unit1-summary.html">Unit Summary</a></li>
                 <li class="list-item"><a href="unit1-quiz.html">Self Quiz</a></li>
+                <li class="list-item highlight"><a href="quiz.html">✨ Interactive Quiz ✨</a></li>
             </ul>
         </div>
 
