--- a/siddhartha/bio/unit2/unit2.html
+++ b/siddhartha/bio/unit2/unit2.html
@@ -49,6 +49,7 @@
                 <li class="list-item"><a href="unit2-case-studies.html">Case Studies</a></li>
                 <li class="list-item"><a href="unit2-lab-concepts.html">Lab Concepts</a></li>
                 <li class="list-item"><a href="unit2-summary.html">Unit Summary</a></li>
+                <li class="list-item"><a href="quiz.html">Interactive Quiz</a></li>
                 <li class="list-item"><a href="unit2-quiz.html">Self Quiz</a></li>
             </ul>
         </div>
